--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -21,8 +21,11 @@
 <% if devise_mapping.omniauthable? && resource_class.omniauth_providers.any? %>
   <div class="du-divider"><%= t("devise.views.shared.links.oauth_separator") %></div>
   <% resource_class.omniauth_providers.each do |provider| %>
-    <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider),
+    <%= button_to omniauth_authorize_path(resource_name, provider),
         data: { turbo: false },
-        class: "du-btn du-btn-outline du-btn-block mb-2" %>
+        class: "du-btn du-btn-outline du-btn-block mb-2" do %>
+        <%= inline_svg_tag "svg/#{ConnectedAccount::PROVIDER_CONFIG[provider.to_sym][:icon]}.svg", class: "w-4 h-4" %>
+        <%= t("devise.views.shared.links.sign_in_with", provider: ConnectedAccount::PROVIDER_CONFIG[provider.to_sym][:name]) %>
+      <% end %>
   <% end %>
 <% end %>
