--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <div class="flex-grow flex flex-col bg-base-300">
       <header class="sticky z-30 top-0">
         <%= render "shared/navbar" %>
-        <div id="flash" class="absolute right-4 z-40 flex flex-col items-end">
+        <div id="flash" class="absolute left-1/2 -translate-x-1/2 z-40 flex flex-col items-center">
           <%= render "shared/flash" %>
         </div>
       </header>
