overflow-hidden on long emails

--- a/app/views/organizations/memberships/_membership.html.erb
+++ b/app/views/organizations/memberships/_membership.html.erb
@@ -1,4 +1,4 @@
-<div class="border border-base-content/20 p-2 rounded-lg space-y-2">
+<div class="border border-base-content/20 p-2 rounded-lg space-y-2 overflow-hidden">
   <div class="flex items-center gap-2">
     <div class="font-medium flex items-center gap-2">
       <%= user_avatar(membership.user) %>
