--- a/app/views/organizations/_users_list.html.erb
+++ b/app/views/organizations/_users_list.html.erb
@@ -1,11 +1,11 @@
-<div class="du-avatar-group -space-x-6">
+<div class="-space-x-6 flex items-center">
   <% max_count = 3 %>
   <% organization.users.limit(max_count).each do |user| %>
     <%= user_avatar(user) %>
   <% end %>
   <% if organization.users.count > max_count %>
-    <div class="du-avatar du-avatar-placeholder">
-      <div class="bg-neutral text-neutral-content w-8">
+    <div class="du-avatar rounded-full du-avatar-placeholder ring-1 ring-neutral-content">
+      <div class="bg-neutral rounded-full text-neutral-content w-8">
         <span class="text-xs">+<%= organization.users.count - max_count %></span>
       </div>
     </div>
