minor css cleanup

--- a/app/views/organizations/projects/index.html.erb
+++ b/app/views/organizations/projects/index.html.erb
@@ -6,7 +6,7 @@
   <% end %>
 
   <div class="table-responsive">
-    <table class="min-w-full">
+    <table>
       <thead>
         <tr>
           <th><%= Project.human_attribute_name(:name) %></th>
