--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -45,5 +45,5 @@
 }
 
 .form-input {
-  @apply block shadow-sm rounded-md border border-gray-400 outline-hidden px-3 py-2 mt-2 w-full;
+  @apply block shadow-sm rounded-md border border-gray-400 outline-hidden px-3 py-2 w-full;
 }
