--- a/app/components/page_component.html.erb
+++ b/app/components/page_component.html.erb
@@ -8,6 +8,12 @@
     </div>
   </div>
 
+  <% if subtitle %>
+    <p class="text-sm text-base-content/60">
+      <%= subtitle %>
+    </p>
+  <% end %>
+
   <div class="space-y-4">
     <%= content %>
   </div>
