--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,22 +1,22 @@
 <div class="flex flex-wrap gap-x-4 gap-y-2">
   <% if controller_name != 'sessions' %>
-    <%= link_to t("devise.views.shared.links.sign_in"), new_session_path(resource_name), class: "text-sm text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 transition-colors duration-200 hover:underline" %>
+    <%= link_to t("devise.views.shared.links.sign_in"), new_session_path(resource_name), class: "du-link du-link-primary" %>
   <% end %>
 
   <% if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to t("devise.views.shared.links.sign_up"), new_registration_path(resource_name), class: "text-sm text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 transition-colors duration-200 hover:underline" %>
+    <%= link_to t("devise.views.shared.links.sign_up"), new_registration_path(resource_name), class: "du-link du-link-primary" %>
   <% end %>
 
   <% if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-    <%= link_to t("devise.views.shared.links.forgot_password"), new_password_path(resource_name), class: "text-sm text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 transition-colors duration-200 hover:underline" %>
+    <%= link_to t("devise.views.shared.links.forgot_password"), new_password_path(resource_name), class: "du-link du-link-primary" %>
   <% end %>
 
   <% if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-    <%= link_to t("devise.views.shared.links.confirmation_instructions"), new_confirmation_path(resource_name), class: "text-sm text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 transition-colors duration-200 hover:underline" %>
+    <%= link_to t("devise.views.shared.links.confirmation_instructions"), new_confirmation_path(resource_name), class: "du-link du-link-primary" %>
   <% end %>
 
   <% if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-    <%= link_to t("devise.views.shared.links.unlock_instructions"), new_unlock_path(resource_name), class: "text-sm text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 transition-colors duration-200 hover:underline" %>
+    <%= link_to t("devise.views.shared.links.unlock_instructions"), new_unlock_path(resource_name), class: "du-link du-link-primary" %>
   <% end %>
 </div>
 
