--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -14,7 +14,7 @@
     </div>
   <% end %>
 
-  <div class="mt-4 text-center space-y-1">
+  <div class="text-center space-y-1">
     <%= render "devise/shared/links" %>
   </div>
 
