--- a/app/views/organizations/projects/_project.html.erb
+++ b/app/views/organizations/projects/_project.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= dom_id project %>">
   <p class="">
-    <strong class="block font-medium mb-1">Name:</strong>
+    <strong class="block font-medium">Name:</strong>
     <%= project.name %>
   </p>
 </div>
