--- a/app/views/shared/_footer_nav.html.erb
+++ b/app/views/shared/_footer_nav.html.erb
@@ -1,11 +1,11 @@
 <nav class="du-dock du-dock-lg lg:hidden sticky bottom-0 border-t border-base-content/20 bg-base-300">
   <% if current_organization %>
-    <%= active_link_to organization_dashboard_path(@organization), class_active: "du-dock-active", class: "" do %>
+    <%= active_link_to organization_dashboard_path(@current_organization), class_active: "du-dock-active", class: "" do %>
       <%= inline_svg_tag "svg/home.svg", class: "size-[1.2em]" %>
       <span class="du-dock-label">Dashboard</span>
     <% end %>
 
-    <%= active_link_to organization_projects_path(@organization), class_active: "du-dock-active", class: "" do %>
+    <%= active_link_to organization_projects_path(@current_organization), class_active: "du-dock-active", class: "" do %>
       <%= inline_svg_tag "svg/question-mark-circle.svg", class: "size-[1.2em]" %>
       <span class="du-dock-label">Projects</span>
     <% end %>
