--- a/app/views/organizations/dashboard/index.html.erb
+++ b/app/views/organizations/dashboard/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "#{current_organization.name} dashboard" %>
+<% content_for :title, t("organizations.dashboard.index.title") %>
 
-<%= render PageComponent.new(title: "Dashboard", full_width: true) do |component| %>
+<%= render PageComponent.new(title: t("organizations.dashboard.index.title"), full_width: true) do |component| %>
 <% end %>
