--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,7 +27,9 @@
       <%= link_to root_path, class: "no-underline" do %>
         <%= image_tag "logo.png", class: "size-8" %>
       <% end %>
-      <%= active_link_to "Pricing", pricing_path, class_active: "du-btn-active", class: "du-btn du-btn-ghost" %>
+      <div class="du-menu du-menu-horizontal">
+        <%= nav_link t("static.pricing.title"), pricing_path %>
+      </div>
     <% end %>
   </div>
 
