--- a/app/views/static/pricing.html.erb
+++ b/app/views/static/pricing.html.erb
@@ -1,3 +1,7 @@
 <% content_for :title, t(".title") %>
 
 <%= render "organizations/subscriptions/pricing" %>
+
+<br>
+
+<%= render "organizations/subscriptions/features" %>
