--- a/app/views/static/terms.html.erb
+++ b/app/views/static/terms.html.erb
@@ -1,6 +1,44 @@
 <% content_for :title, t(".title") %>
 
-<div>
-  <h1 class="font-bold text-lx lg:text-3xll">Static#terms</h1>
-  <p>Find me in app/views/static/terms.html.erb</p>
-</div>
+<%= render PageComponent.new(title: t(".title")) do %>
+  <h2 class="text-2xl font-bold mb-4">
+    Acceptance of Terms
+  </h2>
+  <p>
+    By using our services, you agree to be bound by these Terms of Service.
+  </p>
+
+  <h2 class="text-2xl font-bold mb-4">
+    Use of Our Services
+  </h2>
+  <p>
+    You may use our services only as permitted by these Terms of Service and any applicable laws.
+  </p>
+
+  <h2 class="text-2xl font-bold mb-4">
+    Your Account
+  </h2>
+  <p>
+    You are responsible for maintaining the confidentiality of your account and password and for all activities that occur under your account.
+  </p>
+
+  <h2 class="text-2xl font-bold mb-4">
+    Termination
+  </h2>
+  <p>
+    Users may post comments and other content to our services. You are responsible for the content you post and you must not post content that is illegal, offensive, or in violation of these Terms of Service or any applicable laws.
+  </p>
+  <p>
+    We reserve the right to review and remove any content you post, and to suspend or terminate your account, if we determine that you have violated these Terms of Service or any applicable laws.
+  </p>
+  <p>
+    We may terminate or suspend your access to our services at any time, for any reason, without notice or liability to you.
+  </p>
+
+  <h2 class="text-2xl font-bold mb-4">
+    Changes to These Terms
+  </h2>
+  <p>
+    We may update these Terms of Service from time to time. We will notify you of any changes by posting the new Terms of Service on this page.
+  </p>
+<% end %>
