--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,6 +7,7 @@
   </aside>
 
   <nav>
+    <%= active_link_to t("static.index.title"), root_path, class_active: "du-link-active", class: "du-link du-link-hover" %>
     <%= active_link_to t("static.pricing.title"), pricing_path, class_active: "du-link-active", class: "du-link du-link-hover" %>
   </nav>
   <nav>
