--- a/app/views/users/connected_accounts/_connected_account.html.erb
+++ b/app/views/users/connected_accounts/_connected_account.html.erb
@@ -10,12 +10,18 @@
     <div>
       <% if connected_account.name.present? %>
         <div class="font-medium">
-          <%= connected_account.name %>
+          <%= connected_account.name %> 
+          <% if connected_account.nickname.present? %>
+            (@<%= connected_account.nickname %>)
+          <% end %>
         </div>
       <% end %>
       <div class="font-medium flex items-center gap-2">
         <%= inline_svg_tag "svg/#{ConnectedAccount::PROVIDER_CONFIG[connected_account.provider.to_sym][:icon]}.svg", class: "w-4 h-4" %>
         <%= ConnectedAccount::PROVIDER_CONFIG[connected_account.provider.to_sym][:name] %>
+      </div>
+      <div class="text-sm text-base-content/70 font-mono">
+        <%= connected_account.uid %>
       </div>
       <div class="text-sm text-base-content">
         <%= t(".connected_time_ago", time: time_ago_in_words(connected_account.created_at)) %>
