--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -35,7 +35,7 @@
 
   <%# center %>
   <% if signed_in? %>
-    <div class="flex items-center gap-2">
+    <div class="flex items-center gap-2 hidden">
       <%= active_link_to search_path, data: { turbo_frame: :modal, controller: "click", action: "keydown.meta+k@window->click#click keydown.ctrl+k@window->click#click" }, class: "du-input gap-2 cursor-pointer lg:min-w-64" do %>
         <%= inline_svg_tag "svg/magnifying-glass.svg", class: "size-4" %>
         <span class="grow hidden lg:block"><%= t("search.index.title") %></span>
