--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,7 +25,8 @@
 
     <% else %>
       <%= link_to root_path, class: "no-underline" do %>
-        <%= image_tag "logo.png", class: "size-8" %>
+        <%= image_tag "logo.png", class: "size-8 lg:hidden" %>
+        <%= image_tag "logo-long.png", class: "w-auto h-8 hidden lg:block" %>
       <% end %>
       <div class="du-menu du-menu-horizontal">
         <%= nav_link t("static.pricing.title"), pricing_path %>
