--- a/app/views/devise/shared/_oauth_links.html.erb
+++ b/app/views/devise/shared/_oauth_links.html.erb
@@ -2,7 +2,11 @@
   <% User.omniauth_providers.each do |provider| %>
     <% next unless provider == :google_oauth2 %>
     <% if provider == :telegram %>
-      <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="audiorezka_bot" data-size="large" data-auth-url="http://localhost:3000/users/auth/telegram/callback"></script>
+      <% if Rails.env.production? %>
+        <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="audiorezka_bot" data-size="large" data-auth-url="https://audiorezka.com/users/auth/telegram/callback"></script>
+      <% else %>
+        <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="audiorezka_bot" data-size="large" data-auth-url="http://localhost:3000/users/auth/telegram/callback"></script>
+      <% end %>
     <% else %>
       <%= button_to omniauth_authorize_path(User, provider),
           data: { turbo: false },
