--- a/app/views/organizations/dashboard/paywalled_page.html.erb
+++ b/app/views/organizations/dashboard/paywalled_page.html.erb
@@ -5,7 +5,11 @@
 <% if current_user.connected_accounts.telegram.exists? %>
   <%= render "users/connected_accounts/connected_account", connected_account: current_user.connected_accounts.telegram.first %>
 <% else %>
-  <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="audiorezka_bot" data-size="large" data-auth-url="http://localhost:3000/users/auth/telegram/callback"></script>
+  <% if Rails.env.production? %>
+    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="audiorezka_bot" data-size="large" data-auth-url="https://audiorezka.com/users/auth/telegram/callback"></script>
+  <% else %>
+    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="audiorezka_bot" data-size="large" data-auth-url="http://localhost:3000/users/auth/telegram/callback"></script>
+  <% end %>
 <% end %>
 
 <% end %>
