--- a/app/views/shared/_footer_nav.html.erb
+++ b/app/views/shared/_footer_nav.html.erb
@@ -1,8 +1,8 @@
 <nav class="du-dock du-dock-lg lg:hidden sticky bottom-0 border-t border-base-content/20 bg-base-300">
   <% if current_organization %>
-    <%= active_link_to organization_dashboard_path(@current_organization), class_active: "du-dock-active", class: "" do %>
-      <%= inline_svg_tag "svg/home.svg", class: "size-[1.2em]" %>
-      <span class="du-dock-label">Dashboard</span>
+    <%= active_link_to organization_paywalled_page_path(@current_organization), class_active: "du-dock-active", class: "" do %>
+      🔐
+      <span class="du-dock-label"><%= t("organizations.dashboard.paywalled_page.title") %></span>
     <% end %>
 
     <%= active_link_to organization_subscriptions_path(@current_organization), class_active: "du-dock-active", class: "" do %>
