legal pages in markdown and modals

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,8 @@
 <footer class="p-4 text-center border-t border-base-content/20 bg-base-300 space-y-2">
   <div>
-    <%= active_link_to "Terms", terms_path, class_active: "du-btn-active", class: "du-btn du-btn-ghost" %>
-    <%= active_link_to "Privacy", privacy_path, class_active: "du-btn-active", class: "du-btn du-btn-ghost" %>
+    <%= active_link_to t("static.terms.title"), terms_path, data: { turbo_frame: :modal }, class_active: "du-btn-active", class: "du-btn du-btn-ghost" %>
+    <%= active_link_to t("static.privacy.title"), privacy_path, data: { turbo_frame: :modal }, class_active: "du-btn-active", class: "du-btn du-btn-ghost" %>
+    <%= active_link_to t("static.refunds.title"), refunds_path, data: { turbo_frame: :modal }, class_active: "du-btn-active", class: "du-btn du-btn-ghost" %>
   </div>
 
   <div>
