--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,4 +1,9 @@
-<div>
-  <h1 class="font-bold text-lx lg:text-3xll">Static#index</h1>
-  <p>Find me in app/views/static/index.html.erb</p>
-</div>
+<% content_for :title, t(".title") %>
+
+<%= modal do %>
+  <%= render PageComponent.new(title: t("static.index.title")) do |component| %>
+    <div class="prose">
+      <%= markdown_to_html(File.read(Rails.root.join('README.md'))) %>
+    </div>
+  <% end %>
+<% end %>
