--- a/app/views/static/terms.html.erb
+++ b/app/views/static/terms.html.erb
@@ -1,6 +1,9 @@
 <% content_for :title, t(".title") %>
 
-<div>
-  <h1 class="font-bold text-lx lg:text-3xll">Static#terms</h1>
-  <p>Find me in app/views/static/terms.html.erb</p>
-</div>
+<%= modal do %>
+  <%= render PageComponent.new(title: t("static.terms.title")) do |component| %>
+    <div class="prose">
+      <%= markdown_to_html(File.read(Rails.root.join('app/views/static/terms.md'))) %>
+    </div>
+  <% end %>
+<% end %>
