--- a/app/components/page_component.html.erb
+++ b/app/components/page_component.html.erb
@@ -1,12 +1,18 @@
 <section class="space-y-4 mx-auto <%= width_class %>">
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-2xl lg:text-3xl">
-      <%= title %>
-    </h1>
-    <div class="whitespace-nowrap">
-      <%= action_list %>
+  <% if title.present? || action_list.present? %>
+    <div class="flex justify-between items-center">
+      <% if title.present? %>
+        <h1 class="font-bold text-2xl lg:text-3xl">
+          <%= title %>
+        </h1>
+      <% end %>
+      <% if action_list.present? %>
+        <div class="whitespace-nowrap">
+          <%= action_list %>
+        </div>
+      <% end %>
     </div>
-  </div>
+  <% end %>
 
   <% if subtitle %>
     <p class="text-sm text-base-content/60">
