--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="du-footer du-footer-horizontal p-4 text-center border-t border-base-content/20 bg-base-300 space-y-2">
+<footer class="du-footer lg:du-footer-horizontal p-4 text-center border-t border-base-content/20 bg-base-300 space-y-2">
   <aside>
     <%= image_tag "logo.png", class: "size-10" %>
     &copy; <%= Time.now.year %>
