--- a/app/views/devise/shared/_oauth_links.html.erb
+++ b/app/views/devise/shared/_oauth_links.html.erb
@@ -12,7 +12,12 @@
           data: { turbo: false },
           class: "du-btn du-btn-outline du-btn-block rounded-full" do %>
           <%= inline_svg_tag "svg/#{ConnectedAccount::PROVIDER_CONFIG[provider.to_sym][:icon]}.svg", class: "w-4 h-4" %>
-          <%= t("devise.views.shared.links.sign_in_with", provider: ConnectedAccount::PROVIDER_CONFIG[provider.to_sym][:name]) %>
+          <span class="hidden lg:block">
+            <%= t("devise.views.shared.links.sign_in_with", provider: ConnectedAccount::PROVIDER_CONFIG[provider.to_sym][:name]) %>
+          </span>
+          <span class="block lg:hidden">
+            <%= t("devise.views.shared.links.sign_in", provider: ConnectedAccount::PROVIDER_CONFIG[provider.to_sym][:name]) %>
+          </span>
         <% end %>
     <% end %>
   <% end %>
