add long logo version

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,8 @@
     <% else %>
       <div>
         <%= link_to root_path, class: "no-underline" do %>
-          <%= image_tag "logo.png", class: "size-8" %>
+          <%= image_tag "logo.png", class: "size-8 lg:hidden" %>
+          <%= image_tag "logo-long.png", class: "w-auto h-8 hidden lg:block" %>
         <% end %>
       </div>
       <%= active_link_to "Pricing", pricing_path, class_active: "du-btn-active", class: "du-btn du-btn-ghost" %>
