--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,28 +1,38 @@
 <nav class="flex justify-between px-4 py-2 bg-base-300">
   <%# left %>
   <div class="flex items-center gap-2">
-    <% if signed_in? %>
-      <button data-action="click->mobile-sidebar#open" class="lg:hidden cursor-pointer inline-flex items-center gap-2">
-        <%= inline_svg_tag "svg/bars-3.svg", class: "size-6" %>
-        <% if current_organization %>
-          <div class="inline-flex items-center gap-2 no-underline">
-            <div>
-              <%= organization_avatar(@organization) %>
-            </div>
-            <div class="truncate">
-              <%= @organization.name %>
-            </div>
-          </div>
-        <% end %>
-      </button>
+    <div>
+      <%= link_to root_path, class: "no-underline" do %>
+        <%= image_tag "logo.png", class: "size-8 lg:hidden" %>
+        <%= image_tag "logo-long.png", class: "w-auto h-8 hidden lg:block" %>
+      <% end %>
+    </div>
 
+    <% if signed_in? %>
+      <% if Rails.application.config_for(:settings).dig(:only_personal_accounts) %>
+        <div class="du-menu du-menu-horizontal">
+          <%= render "shared/sidebar_links" %>
+          <%= nav_link t("organizations.subscriptions.index.title"), organization_subscriptions_path(current_organization), class: "hidden lg:block", icon: subscription_status_label(current_organization) if Rails.application.credentials.dig(:stripe, :private_key).present? %>
+        </div>
+        <% else %>
+        <button data-action="click->mobile-sidebar#open" class="lg:hidden cursor-pointer inline-flex items-center gap-2">
+          <%= inline_svg_tag "svg/bars-3.svg", class: "size-6" %>
+          <% if current_organization %>
+            <div class="inline-flex items-center gap-2 no-underline">
+              <div>
+                <%= organization_avatar(@organization) %>
+              </div>
+              <div class="truncate">
+                <%= @organization.name %>
+              </div>
+            </div>
+          <% end %>
+        </button>
+      <% end %>
     <% else %>
-      <div>
-        <%= link_to root_path, class: "no-underline" do %>
-          <%= image_tag "logo.png", class: "size-8" %>
-        <% end %>
+      <div class="du-menu du-menu-horizontal">
+        <%= nav_link t("static.pricing.title"), pricing_path %>
       </div>
-      <%= active_link_to "Pricing", pricing_path, class_active: "du-btn-active", class: "du-btn du-btn-ghost" %>
     <% end %>
   </div>
 
