devise masquerade (impersonate/login as)

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -42,6 +42,10 @@
   <%# right %>
   <div class="flex items-center gap-2">
     <% if signed_in? %>
+      <% if user_masquerade? %>
+        <%= link_to "⚠ STOP IMPERSONATING", back_masquerade_path(current_user), class: "du-btn du-btn-warning" %>
+      <% end %>
+
       <% if current_user.admin? %>
         <details class="relative group flex items-center" data-controller="dropdown" data-action="keydown.esc@window->dropdown#close">
           <summary class="inline-flex items-center gap-1 font-medium text-sm cursor-pointer [&::-webkit-details-marker]:hidden">
